# LLM-resume-moderator

./: .dockerignore  .env  .env.example  .flake8  .gitignore  1_EDA_preproc.ipynb  4_inference.ipynb  5_local_inference.ipynb  CLAUDE.md  Dockerfile  LICENSE  README.md  README_(LLM-resume-moderator).md  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requirements_for_paddle  routers.py  schemas.py
.gitgub/: moderator-build.yml
.github/: BUG_ISSUE.md  CONTRIBUTING.md  FEATURE_ISSUE.md
.github/workflows/: CODEOWNERS  CODOWNERS  moderator-build.yml
app/: Dockerfile  OCR.py  agent.py  config.py  logger.py  logging_config.py  main.py  manager.py  requirements.txt  resume_rools.json  resume_rules.json  resume_text_converter.py  routers.py  schemas.py  slovar.py  utils.py
app/tests/: conftest.py  requirements-test.txt  test_e2e.py  test_moderation.py  test_utils.py
configs/: config.py  logging_config.py  required_specialties.py  resume_rules.json  settings.py  slovar.py  specialties.py
data/: resume_rools.json  specialties_reference_test.txt
debug/: test.ipynb  test_curls.sh
init_db_scripts/: init_db.sh  init_local_db.sh
model_service/: Dockerfile
notebooks/: 2_llamaguard_3_8b_zeroshot.ipynb  3_extract_rools.ipynb  4_inference.ipynb
routers/: api_routers.py  schemas.py
service/: OCR.py  document_service.py  education_normalizer.py  llm_interface.py  llm_service.py  resume_text_converter.py  rules_moderator.py  selection_service.py  utils.py
tests/: requirements-test.txt  test_e2e.py
(+3 files in other folders)
